--- a/index.html
+++ b/index.html
@@ -1,11 +1,377 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>T-sorts Футболки мечты</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700&amp;subset=cyrillic" rel="stylesheet">
+
+    <link rel="stylesheet" href="./css/stylesheet.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/main.css">
+
 </head>
+
 <body>
-    
+    <div class="wrapper">
+        <section class="hero">
+            <header class="header">
+                <a href="#" class="logo">
+                    <img src="/img/content/logos/logo-main.png" class="logo__pic" alt="lost short logo">
+                </a>
+                <a href="mailto:www@gmail.com" class="mail">
+                    <div class="mail__title">По всем вопросам пешите на</div>
+                    <div class="mail__content">www@gmail.com</div>
+                </a>
+            </header>
+            <div class="hero__content">
+                <div class="fade-slider">
+                    <div class="fade-slider__item">
+                        <div class="fade-slider__text">
+                            <h1 class="lined-text">
+                                <div class="lined-text__word">три</div>
+                                <div class="lined-text__word">футболки</div>
+                                <div class="lined-text__word lined-text__word--color-yellow">по цене</div>
+                                <div class="lined-text__word lined-text__word--color-yellow">двух</div>
+                            </h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <aside class="sidebar ">
+                <a href="#" class="sidebar__hamburger">
+                    <svg class="sidebar__hamburger-icon">
+                        <use xlink:href="./img/icons-sprite.svg#bars"></use>
+                    </svg>
+                </a>
+                <div class="sidebar__header">
+                    <a href="#" class="logo">
+                        <img src="./img/content/logos/logo-main.png" alt="" class="logo__image">
+                    </a>
+                    <a href="#" class="sidebar__close">
+                        <svg class="sidebar__close-icon">
+                            <use xlink:href="./img/icons-sprite.svg#cross"></use>
+                        </svg>
+                    </a>
+                </div>
+                <nav class="side-menu sidebar__menu">
+                    <ul class="side-menu__list">
+                        <li class="side-menu__item">
+                            <a href="#" class="side-menu__link">Детская коллекция</a>
+                        </li>
+                        <li class="side-menu__item">
+                            <a href="#" class="side-menu__link">Мужская коллекция</a>
+                        </li>
+                        <li class="side-menu__item">
+                            <a href="#" class="side-menu__link">Женская коллекция</a>
+                        </li>
+                        <li class="side-menu__item">
+                            <a href="#" class="side-menu__link">Популярные принты</a>
+                        </li>
+                        <li class="side-menu__item">
+                            <a href="#" class="side-menu__link">Новые принты</a>
+                        </li>
+                        <li class="side-menu__item">
+                            <a href="#" class="side-menu__link">Специальные предложение</a>
+                        </li>
+                        <li class="side-menu__item">
+                            <a href="#" class="side-menu__link">Скоро в продаже</a>
+                        </li>
+
+                    </ul>
+                </nav>
+            </aside>
+        </section>
+        <section class="products">
+            <div class="container">
+                <ul class="filter">
+                    <li class="filter__item filter__item--active">
+                        <a href="#" class="filter__link">Популярное</a>
+                    </li>
+                    <li class="filter__item">
+                        <a href="#" class="filter__link">Новинки</a>
+                    </li>
+                    <li class="filter__item">
+                        <a href="#" class="filter__link">Бестселерры</a>
+                    </li>
+                    <li class="filter__item">
+                        <a href="#" class="filter__link">Специальное предложение</a>
+                    </li>
+                    <li class="filter__item">
+                        <a href="#" class="filter__link">Скоро в продаже</a>
+                    </li>
+                </ul>
+                <ul class="products__list">
+                    <li class="products__item">
+                        <div class="products__price">
+                            <div class="products__price-amount">1800</div>
+                        </div>
+                        <div class="products__content">
+                            <img src="./img/tshirts/tshirt_01.png" alt="" class="products__img">
+                            <div class="products__desc">
+                                <div class="products__desc-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                </div>
+                                <a href="" class="btn">Подробнее</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="products__item">
+                        <div class="products__price">
+                            <div class="products__price-amount">1800</div>
+                        </div>
+                        <div class="products__content">
+                            <img src="./img/tshirts/tshirt_02.png" alt="" class="products__img">
+                            <div class="products__desc">
+                                <div class="products__desc-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                </div>
+                                <a href="" class="btn">Подробнее</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="products__item products__item--color-black products__item--size-double">
+                        <div class="products__price">
+                            <div class="products__price-amount">1800</div>
+                        </div>
+                        <div class="products__content">
+
+                            <img src="./img/tshirts/tshirt_03.png" alt="" class="products__img">
+                            <div class="products__desc">
+                                <div class="products__desc-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                </div>
+                                <a href="" class="btn">Подробнее</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="products__item products__item--color-black products__item--size-double">
+
+                        <div class="products__price">
+                            <div class="products__price-amount">1800</div>
+                        </div>
+                        <div class="products__content">
+
+                            <img src="./img/tshirts/tshirt_04.png" alt="" class="products__img">
+                            <div class="products__desc">
+                                <div class="products__desc-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                </div>
+                                <a href="" class="btn">Подробнее</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="products__item">
+                        <div class="products__price">
+                            <div class="products__price-amount">1800</div>
+                        </div>
+                        <div class="products__content">
+                            <div class="products__price">
+                                <div class="products__price-amount">1800</div>
+                            </div>
+                            <img src="./img/tshirts/tshirt_05.png" alt="" class="products__img">
+                            <div class="products__desc">
+                                <div class="products__desc-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                </div>
+                                <a href="" class="btn">Подробнее</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="products__item">
+                        <div class="products__price">
+                            <div class="products__price-amount">1800</div>
+                        </div>
+                        <div class="products__content">
+
+                            <img src="./img/tshirts/tshirt_06.png" alt="" class="products__img">
+                            <div class="products__desc">
+                                <div class="products__desc-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                </div>
+                                <a href="" class="btn">Подробнее</a>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="collection">
+            <div class="container">
+                <ul class="collection__list">
+                    <li class="collection__item collection__item--type-guys">
+                        <a href="#" class="collection__link">
+                            <h2 class="collection__title">Мужская коллекция</h2>
+                            <div class="collection__disc">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            </div>
+                            <div class="btn">Посмотреь</div>
+                        </a>
+                    </li>
+                    <li class="collection__item collection__item--type-girls">
+                        <a href="#" class="collection__link">
+                            <h2 class="collection__title">Женская коллекция</h2>
+                            <div class="collection__disc">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            </div>
+                            <div class="btn">Посмотреь</div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <footer class="footer">
+            <div class="container footer__container">
+                <nav class="site-menu">
+                    <ul class="site-menu__sections">
+                        <li class="site-menu__col">
+                            <h3 class="site-menu__title">Информация</h3>
+                            <ul class="site-menu__list">
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">
+                                        О магазине
+                                    </a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">
+                                        Адреса магазинов
+                                    </a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">
+                                        Как сделать заказ
+                                    </a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">
+                                        Обмен и возврат
+                                    </a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">
+                                        Отзывы
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="site-menu__col">
+                            <h3 class="site-menu__title">Футболки</h3>
+                            <ul class="site-menu__list">
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">
+                                        Популярное
+                                    </a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">
+                                        Новинки
+                                    </a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">
+                                        Бестселерры
+                                    </a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">
+                                        Специальные предложения
+                                    </a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">
+                                        Скоро в продаже
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="site-menu__col">
+                            <h3 class="site-menu__title">Коллекции</h3>
+                            <ul class="site-menu__list">
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">
+                                        Детская коллекция
+                                    </a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">
+                                        Женская коллекция
+                                    </a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">
+                                        Мужская коллекция
+                                    </a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">
+                                        Лучшие принты 2018 года
+                                    </a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">
+                                        Лучшие принты 2019 года
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="site-menu__col">
+                            <h3 class="site-menu__title">Контактная информация</h3>
+                            <div class="site-menu__text">Санкт-Петербург, <br>
+                                ул. Жуковского, д. 12</div>
+                            <div class="site-menu__text">
+                                <a href="tel.:781239876543" class="site-menu__text-row">Телефон: 7 (123)9876543</a>
+                                <a href="mailto:support@gmail.com" class="site-menu__text-row">Email:
+                                    support@gmail.com</a>
+                            </div>
+                        </li>
+                    </ul>
+                </nav>
+                <section class="extras">
+                    <div class="extras__col">
+                        <a href="#" class="extras__best">Лучшие принты <br>
+                            2019 года </a>
+                    </div>
+                    <div class="extras__col">
+                        <div class="extras__col-socials">
+                            <ul class="socials">
+                                <li class="socials__item">
+                                    <a href="#" class="socials__link">
+                                        <svg class="socials__icon">
+                                            <use xlink:href="./img/icons-sprite.svg#fb"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="socials__item">
+                                    <a href="#" class="socials__link">
+                                        <svg class="socials__icon">
+                                            <use xlink:href="./img/icons-sprite.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="socials__item">
+                                    <a href="#" class="socials__link">
+                                        <svg class="socials__icon">
+                                            <use xlink:href="./img/icons-sprite.svg#insta"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="socials__item">
+                                    <a href="#" class="socials__link">
+                                        <svg class="socials__icon">
+                                            <use xlink:href="./img/icons-sprite.svg#pin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                </section>
+            </div>
+        </footer>
+
+    </div>
+
 </body>
+
 </html>
