--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 </a>
             </header>
             <div class="hero__content">
-                <div class="fade-slider">
-                    <div class="fade-slider__item">
+                <ul class="fade-slider">
+                    <li class="fade-slider__item fade-slider__item--style-tshirts fade-slider__item--visible">
                         <div class="fade-slider__text">
                             <h1 class="lined-text">
                                 <div class="lined-text__word">три</div>
@@ -37,8 +37,24 @@
                                 <div class="lined-text__word lined-text__word--color-yellow">двух</div>
                             </h1>
                         </div>
-                    </div>
-                </div>
+                    </li>
+                    <li class="fade-slider__item fade-slider__item--style-games ">
+                        <div class="fade-slider__text">
+                            <h1 class="lined-text">
+                                <div class="lined-text__word">Любимые игры</div>
+                                <div class="lined-text__word lined-text__word--color-yellow">на лучших футболках</div>
+                            </h1>
+                        </div>
+                    </li>
+                    <li class="fade-slider__item fade-slider__item--style-presents fade-slider__item--visible">
+                        <div class="fade-slider__text">
+                            <h1 class="lined-text">
+                                <div class="lined-text__word">Подарки </div>
+                                <div class="lined-text__word lined-text__word--color-yellow">для любимых</div>
+                            </h1>
+                        </div>
+                    </li>
+                </ul>
             </div>
             <aside class="sidebar ">
                 <a href="#" class="sidebar__hamburger">
