--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 <a href="" class="logo">
                     <img src="./img/content/logos/logo-main.png" class="logo__pic" alt="lost shirt logo">
                 </a>
+                <a href="products.html" class="mail">
+                    <div class="mail__content">Наша продукция</div>
+                </a>
                 <a href="mailto:lostinspace@mail.ru" class="mail">
                     <div class="mail__title">По всем вопросам пишите на:</div>
                     <div class="mail__content">lostinspace@mail.ru</div>
