--- a/products.html
+++ b/products.html
@@ -21,36 +21,18 @@
           <img src="./img/content/logos/logo-main.png" class="logo__pic" alt="lost shirt logo">
         </a>
         <div class="hero__content">
-          <ul class="fade-slider  ">
-            <li class="fade-slider__item fade-slider__item--style-tshirts fade-slider__item--visible">
-              <div class="fade-slider__text">
-                <h1 class="lined-text">
-                  <span class="lined-text__word">три</span>
-                  <span class="lined-text__word">футболки</span>
-                  <span class="lined-text__word lined-text__word--color-yellow">по цене</span>
-                  <span class="lined-text__word lined-text__word--color-yellow">двух</span>
-                </h1>
-              </div>
-            </li>
-            <li class="fade-slider__item fade-slider__item--style-games ">
-              <div class="fade-slider__text">
-                <h1 class="lined-text lined-text--no-indent">
-                  <span class="lined-text__word">Любимые игры</span>
-                  <span class="lined-text__word lined-text__word--color-yellow">на лучших футболках</span>
-                </h1>
-              </div>
-            </li>
-            <li class="fade-slider__item fade-slider__item--style-presents">
-              <div class="fade-slider__text">
-                <h1 class="lined-text lined-text--no-indent">
-                  <span class="lined-text__word">Подарки</span>
-                  <span class="lined-text__word lined-text__word--color-yellow">для любимых</span>
-                </h1>
-              </div>
-            </li>
-          </ul>
-        </div>
 
+          <div class="fade-slider__item fade-slider__item--style-tshirts fade-slider__item--visible">
+            <div class="fade-slider__text">
+              <h1 class="lined-text">
+                <span class="lined-text__word">три</span>
+                <span class="lined-text__word">футболки</span>
+                <span class="lined-text__word lined-text__word--color-yellow">по цене</span>
+                <span class="lined-text__word lined-text__word--color-yellow">двух</span>
+              </h1>
+            </div>
+          </div>
+        </div>
         <a href="mailto:lostinspace@mail.ru" class="mail">
           <div class="mail__title">По всем вопросам пишите на:</div>
           <div class="mail__content">lostinspace@mail.ru</div>
